--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -17,6 +17,10 @@
             <li class="nav-item">
                 <a class="nav-link waves-light" [routerLink]="'addExam'" mdbWavesEffect>Add exam</a>
             </li>
+
+            <li class="nav-item">
+                <a class="nav-link waves-light" [routerLink]="'courses'" mdbWavesEffect>Courses</a>
+            </li>
             <!-- Dropdown -->
             <!-- <li class="nav-item dropdown" dropdown>
           <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
