--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,27 +14,84 @@
             <!--Card content-->
             <mdb-card-body>
                 <!--Title-->
-                <mdb-card-title>
-                    <h4>Login</h4>
-                </mdb-card-title>
-                <div class="container">
-                    <div class="row">
-                        <label for="username">Username</label>
-                        <input name="username" type="text" [(ngModel)]="username">
-                    </div>
-                    <div class="row">
-                        <label for="password">Password</label>
-                        <input name="password" type="password" [(ngModel)]="password">
-                    </div>
-                    <!--Text-->
-                    <!-- <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's
-        content.
-      </mdb-card-text> -->
-                    <div class="row m-3">
-                        <button type="submit" (click)="login()" class="btn btn-info">Login</button>
-                    </div>
+                <nav ngbNav #nav="ngbNav"  class="nav-tabs">
+                    <ng-container ngbNavItem>
+                        <a ngbNavLink>Login</a>
+                        <ng-template ngbNavContent>
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <label for="username">Username</label>
+                                    <input name="username" type="text" [(ngModel)]="username">
+                                </div>
+                                <div class="row mt-2">
+                                    <label for="password">Password</label>
+                                    <input name="password" type="password" [(ngModel)]="password">
+                                </div>
+                                <div class="row m-3">
+                                    <button type="submit" (click)="login()" class="btn btn-info">Login</button>
+                                </div>
+                            </div>
+                        </ng-template>
+                    </ng-container>
+                    <ng-container ngbNavItem>
+                        <a ngbNavLink>Register</a>
+                        <ng-template ngbNavContent>
+                            <form #myForm="ngForm" (submit)="register(myForm.value)" novalidate>
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <label for="username">Username</label>
+                                    </div>
+                                    <div class="row">
+                                        <input ngModel type="text" id="username" name="username">
+                                    </div>
+                                    <div class="row mt-2">
+                                        <label for="firstname">First name</label>
+                                    </div>
+                                    <div class="row">
+                                        <input ngModel type="text" id="firstname" name="firstname">
+                                    </div>
+                                    <div class="row mt-2">
+                                        <label for="lastname">Last name</label>
+                                    </div>
+                                    <div class="row">
+                                        <input ngModel type="text" id="lastname" name="lastname">
+                                    </div>
+                                    <div class="row mt-2">
+                                        <label for="email">Email</label>
+                                    </div>
+                                    <div class="row">
+                                        <input ngModel type="text" id="email" name="email">
+                                    </div>
+                                    <div class="row mt-2">
+                                        <label for="password">Password</label>
+                                    </div>
+                                    <div class="row">
+                                        <input ngModel type="password" id="password" name="password">
+                                    </div>
+                                    <div class="row mt-2">
+                                        <label for="degree">Degree</label>
+                                    </div>
+                                    <div class="row">
+                                        <select name="degree" ngModel>
+                                            <option value="No degree">No degree</option>
+                                            <option value="Bachelor">Bachelor</option>
+                                            <option value="Master">Masters</option>
+                                            <option value="PhD">PhD</option>
+                                        </select>
+                                    </div>
+                                    <div class="row m-3">
+                                        <button type="submit" class="btn btn-info">Register</button>
+                                    </div>
+                                </div>
+                            </form>
 
-                </div>
+                        </ng-template>
+                    </ng-container>
+                </nav>
+
+                <div [ngbNavOutlet]="nav" class="mt-2"></div>
+
+
             </mdb-card-body>
         </mdb-card>
     </div>
